--- a/code/ml_experiments/my_experiments/find_sh1.ipynb
+++ b/code/ml_experiments/my_experiments/find_sh1.ipynb
@@ -8,7 +8,9 @@
     "$$ u_t = -(\\Delta+1)^2 u + Ru - u^3 $$\n",
     "$$ \\\\ u_t = -\\Delta^2 u -2\\Delta u -u + Ru - u^3 $$\n",
     "We first make an overly simplified experiment, where our library\n",
-    "of functions consist of 1, u, u^3, lap(u) and biharm(u)"
+    "of functions consist of 1, u, u^3, lap(u) and biharm(u)\n",
+    "\n",
+    "This is based on Kutz implementation of PDE_FIND"
    ],
    "metadata": {
     "collapsed": false,
@@ -19,16 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from myPDEFIND import *\n",
     "import scipy.io as sio\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/PDEFIND')\n",
+    "from PDE_FIND import *"
    ]
   },
   {
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/sh2.mat\")"
@@ -71,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0, 0.5, 'y')"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -125,7 +129,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Dataset is large- so we randomly 150,000 data points\n",
+    "Dataset is large- so we randomly 15,000 data points\n",
     "Generate a dictionary with integer keys, whose values are tuples\n",
     "representing indices we will use to sample U[:,:,:]"
    ],
@@ -138,17 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n"
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n"
      ]
     }
    ],
@@ -157,7 +161,7 @@
     "# Sample a collection of data points.  See figure 1 panel 2a.\n",
     "np.random.seed(0) # so that numbers in paper are reproducible\n",
     "\n",
-    "num_xy = 5000 # needs to be very high to work with noise\n",
+    "num_xy = 500 # needs to be very high to work with noise\n",
     "num_t = 30\n",
     "num_points = num_xy * num_t\n",
     "boundary = 5\n",
@@ -165,7 +169,7 @@
     "count = 0\n",
     "\n",
     "for p in range(num_xy):\n",
-    "    if p % 1000 == 0:\n",
+    "    if p % 100 == 0:\n",
     "        print(p)\n",
     "    x = np.random.choice(np.arange(boundary,nx-boundary),1)[0]\n",
     "    y = np.random.choice(np.arange(boundary,ny-boundary),1)[0]\n",
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -214,146 +218,33 @@
       "11000\n",
       "12000\n",
       "13000\n",
-      "14000\n",
-      "15000\n",
-      "16000\n",
-      "17000\n",
-      "18000\n",
-      "19000\n",
-      "20000\n",
-      "21000\n",
-      "22000\n",
-      "23000\n",
-      "24000\n",
-      "25000\n",
-      "26000\n",
-      "27000\n",
-      "28000\n",
-      "29000\n",
-      "30000\n",
-      "31000\n",
-      "32000\n",
-      "33000\n",
-      "34000\n",
-      "35000\n",
-      "36000\n",
-      "37000\n",
-      "38000\n",
-      "39000\n",
-      "40000\n",
-      "41000\n",
-      "42000\n",
-      "43000\n",
-      "44000\n",
-      "45000\n",
-      "46000\n",
-      "47000\n",
-      "48000\n",
-      "49000\n",
-      "50000\n",
-      "51000\n",
-      "52000\n",
-      "53000\n",
-      "54000\n",
-      "55000\n",
-      "56000\n",
-      "57000\n",
-      "58000\n",
-      "59000\n",
-      "60000\n",
-      "61000\n",
-      "62000\n",
-      "63000\n",
-      "64000\n",
-      "65000\n",
-      "66000\n",
-      "67000\n",
-      "68000\n",
-      "69000\n",
-      "70000\n",
-      "71000\n",
-      "72000\n",
-      "73000\n",
-      "74000\n",
-      "75000\n",
-      "76000\n",
-      "77000\n",
-      "78000\n",
-      "79000\n",
-      "80000\n",
-      "81000\n",
-      "82000\n",
-      "83000\n",
-      "84000\n",
-      "85000\n",
-      "86000\n",
-      "87000\n",
-      "88000\n",
-      "89000\n",
-      "90000\n",
-      "91000\n",
-      "92000\n",
-      "93000\n",
-      "94000\n",
-      "95000\n",
-      "96000\n",
-      "97000\n",
-      "98000\n",
-      "99000\n",
-      "100000\n",
-      "101000\n",
-      "102000\n",
-      "103000\n",
-      "104000\n",
-      "105000\n",
-      "106000\n",
-      "107000\n",
-      "108000\n",
-      "109000\n",
-      "110000\n",
-      "111000\n",
-      "112000\n",
-      "113000\n",
-      "114000\n",
-      "115000\n",
-      "116000\n",
-      "117000\n",
-      "118000\n",
-      "119000\n",
-      "120000\n",
-      "121000\n",
-      "122000\n",
-      "123000\n",
-      "124000\n",
-      "125000\n",
-      "126000\n",
-      "127000\n",
-      "128000\n",
-      "129000\n",
-      "130000\n",
-      "131000\n",
-      "132000\n",
-      "133000\n",
-      "134000\n",
-      "135000\n",
-      "136000\n",
-      "137000\n",
-      "138000\n",
-      "139000\n",
-      "140000\n",
-      "141000\n",
-      "142000\n",
-      "143000\n",
-      "144000\n",
-      "145000\n",
-      "146000\n",
-      "147000\n",
-      "148000\n",
-      "149000\n"
+      "14000\n"
      ]
     }
    ],
    "source": [
+    "import scipy as sp\n",
+    "\n",
+    "def Laplacian(func,Lx,Ly):\n",
+    "    ny, nx = np.shape(func)\n",
+    "    kx = (2. * np.pi /Lx)*sp.fft.fftfreq(nx, 1. / nx)\n",
+    "    ky = (2. * np.pi /Ly)*sp.fft.fftfreq(ny, 1. / ny)\n",
+    "    Kx, Ky = np.meshgrid(kx, ky)\n",
+    "    fourierLaplacian = -(Kx ** 2 + Ky ** 2)\n",
+    "    lap = np.real(sp.fft.ifft2(fourierLaplacian*sp.fft.fft2(func)))\n",
+    "    return lap\n",
+    "\n",
+    "\n",
+    "def Biharmonic(func,Lx,Ly):\n",
+    "    ny, nx = np.shape(func)\n",
+    "    kx = (2. * np.pi / Lx) * sp.fft.fftfreq(nx, 1. / nx)\n",
+    "    ky = (2. * np.pi / Ly) * sp.fft.fftfreq(ny, 1. / ny)\n",
+    "    Kx, Ky = np.meshgrid(kx, ky)\n",
+    "    fourierLaplacian = -(Kx ** 2 + Ky ** 2)\n",
+    "    fourierBiharm = fourierLaplacian*fourierLaplacian\n",
+    "    biharm = np.real(sp.fft.ifft2(fourierBiharm * sp.fft.fft2(func)))\n",
+    "    return biharm\n",
+    "\n",
     "# Take up to second order derivatives.\n",
     "u = np.zeros((num_points,1))\n",
     "ut = np.zeros((num_points,1))\n",
@@ -397,13 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "['1',\n 'biharm_u',\n 'lap_u',\n 'u',\n 'u^2',\n 'u^3',\n 'ubiharm_u',\n 'u^2biharm_u',\n 'u^3biharm_u',\n 'ulap_u',\n 'u^2lap_u',\n 'u^3lap_u']"
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,16 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u_t = (0.000056 +0.000000i)ubiharm_u\n",
-      "    + (-0.000083 +0.000000i)u^3biharm_u\n",
-      "    + (0.000116 +0.000000i)ulap_u\n",
-      "    + (-0.000181 +0.000000i)u^3lap_u\n",
+      "u_t = (-0.000021 +0.000000i)u^2biharm_u\n",
       "   \n"
      ]
     }
