--- a/code/spectral_derivs/spec_deriv.ipynb
+++ b/code/spectral_derivs/spec_deriv.ipynb
@@ -546,6 +546,103 @@
     "This had a high relative error... retrying"
    ],
    "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def test_func_yy(x,y):\n",
+    "    exponent = x**2+y**2\n",
+    "    top_exp = np.exp(-exponent/2000)\n",
+    "    top_trig = (y**2-1000)*np.cos(x/10)+(y**2-11000)*np.sin(y/10)-200*y*np.cos(y/10)\n",
+    "    return top_exp*top_trig/1000000\n",
+    "\n",
+    "fig = plt.figure(figsize=(3,5))\n",
+    "ax1 = fig.add_subplot(211, projection='3d')\n",
+    "f_yy = test_func_yy(X,Y)\n",
+    "ax1.plot_surface(X,Y,f_yy)\n",
+    "ax2 = fig.add_subplot(212)\n",
+    "ax2.imshow(f_yy)\n",
+    "\n",
+    "def fft_partial_yy(func,Lx,Ly):\n",
+    "    func_y = fft_partial_y(func,Lx,Ly)\n",
+    "    return fft_partial_y(func_y,Lx,Ly)\n",
+    "\n",
+    "fig2 = plt.figure(figsize=(3,5))\n",
+    "ax12 = fig2.add_subplot(211, projection='3d')\n",
+    "fft_f_yy = fft_partial_yy(Z,Lx,Ly)\n",
+    "ax12.plot_surface(X,Y,fft_f_yy)\n",
+    "ax22 = fig2.add_subplot(212)\n",
+    "ax22.imshow(fft_f_yy)\n",
+    "\n",
+    "print(\"norm of difference\",np.linalg.norm(f_yy-fft_f_yy))\n",
+    "print(\"norm of exact\",np.linalg.norm(f_yy))\n",
+    "print(\"rel err\", np.linalg.norm(f_yy-fft_f_yy)/np.linalg.norm(f_yy))\n",
+    "print(\"sum of exact f_yy\",np.sum(f_yy))\n",
+    "print(\"sum of fft f_yy\",np.sum(fft_f_yy))\n",
+    "print(\"mean of exact f_yy\",np.mean(f_yy))\n",
+    "print(\"mean of fft f_yy\",np.mean(fft_f_yy))\n",
+    "print(\"max of exact f_yy\",np.max(f_yy))\n",
+    "print(\"max of fft f_yy\",np.max(fft_f_yy))\n",
+    "print(\"min of exact f_yy\",np.min(f_yy))\n",
+    "print(\"min of fft f_yy\",np.min(fft_f_yy))\n",
+    "print(\"std dev of f_yy\",np.std(f_yy))\n",
+    "print(\"std dev of fft f_yy\",np.std(fft_f_yy))\n",
+    "print(\"max diff\",np.max(np.abs(f_yy-fft_f_yy)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "def test_func_yy(x,y):\n",
+    "    exponent = x**2+y**2\n",
+    "    top_exp = np.exp(-exponent/2000)\n",
+    "    top_trig = (y**2-1000)*np.cos(x/10)+(y**2-11000)*np.sin(y/10)-200*y*np.cos(y/10)\n",
+    "    return top_exp*top_trig/1000000\n",
+    "\n",
+    "fig = plt.figure(figsize=(3,5))\n",
+    "ax1 = fig.add_subplot(211, projection='3d')\n",
+    "f_yy = test_func_yy(X,Y)\n",
+    "ax1.plot_surface(X,Y,f_yy)\n",
+    "ax2 = fig.add_subplot(212)\n",
+    "ax2.imshow(f_yy)\n",
+    "\n",
+    "def fft_partial_yy(func,Lx,Ly):\n",
+    "    func_y = fft_partial_y(func,Lx,Ly)\n",
+    "    return fft_partial_y(func_y,Lx,Ly)\n",
+    "\n",
+    "fig2 = plt.figure(figsize=(3,5))\n",
+    "ax12 = fig2.add_subplot(211, projection='3d')\n",
+    "fft_f_yy = fft_partial_yy(Z,Lx,Ly)\n",
+    "ax12.plot_surface(X,Y,fft_f_yy)\n",
+    "ax22 = fig2.add_subplot(212)\n",
+    "ax22.imshow(fft_f_yy)\n",
+    "\n",
+    "print(\"norm of difference\",np.linalg.norm(f_yy-fft_f_yy))\n",
+    "print(\"norm of exact\",np.linalg.norm(f_yy))\n",
+    "print(\"rel err\", np.linalg.norm(f_yy-fft_f_yy)/np.linalg.norm(f_yy))\n",
+    "print(\"sum of exact f_yy\",np.sum(f_yy))\n",
+    "print(\"sum of fft f_yy\",np.sum(fft_f_yy))\n",
+    "print(\"mean of exact f_yy\",np.mean(f_yy))\n",
+    "print(\"mean of fft f_yy\",np.mean(fft_f_yy))\n",
+    "print(\"max of exact f_yy\",np.max(f_yy))\n",
+    "print(\"max of fft f_yy\",np.max(fft_f_yy))\n",
+    "print(\"min of exact f_yy\",np.min(f_yy))\n",
+    "print(\"min of fft f_yy\",np.min(fft_f_yy))\n",
+    "print(\"std dev of f_yy\",np.std(f_yy))\n",
+    "print(\"std dev of fft f_yy\",np.std(fft_f_yy))\n",
+    "print(\"max diff\",np.max(np.abs(f_yy-fft_f_yy)))"
+   ],
+   "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
