compared backward and chebychev diff

--- a/code/derivatives/time_derivatives.ipynb
+++ b/code/derivatives/time_derivatives.ipynb
@@ -2,76 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
-    "We use \"PDEFIND\" method here to \"discover\" swift hohenberg from\n",
-    "its numerical simulations. Swift-Hohenberg reads\n",
-    "$$ u_t = -(\\Delta+1)^2 u + Ru - u^3 $$\n",
-    "$$ \\\\ u_t = -\\Delta^2 u -2\\Delta u -u + Ru - u^3 $$\n",
-    "We first make an overly simplified experiment, where our library\n",
-    "of functions consist of 1, u, u^3, lap(u) and biharm(u)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import scipy.io as sio\n",
-    "import numpy as np\n",
-    "from myPDEFIND import *\n",
-    "import math"
+    "Comparing chebyshev differentiation with backward differences"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/sh3.mat\")\n"
-   ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "load data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+    "collapsed": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": "Text(0, 0.5, 'y')"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.548868849042866e-06\n",
+      "1.034638086644087e-06\n"
+     ]
     },
     {
      "data": {
@@ -85,6 +39,14 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.io as sio\n",
+    "import numpy as np\n",
+    "from myPDEFIND import *\n",
+    "import math\n",
+    "\n",
+    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/sh3.mat\")\n",
+    "\n",
     "t_full = data['tt'].T[:,0]\n",
     "x = data['xx'].T[0,:]\n",
     "y = data['yy'].T[0,:]\n",
@@ -105,38 +67,13 @@
     "ax1.pcolor(xx,yy,U[:,:,10].T,cmap='coolwarm')\n",
     "ax1.set_title('U', fontsize = 20)\n",
     "ax1.set_xlabel('x', fontsize = 16)\n",
-    "ax1.set_ylabel('y', fontsize = 16)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Display sample plot"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
-   "source": [
+    "ax1.set_ylabel('y', fontsize = 16)\n",
+    "\n",
     "# Sample a collection of data points.\n",
     "np.random.seed(0) # so that numbers are reproducible\n",
     "\n",
-    "#We will randomly sample num_xy spatial points for num_t time values\n",
-    "num_xy = 5000# needs to be very high to work with noise\n",
-    "num_t = 30\n",
+    "num_xy = 100\n",
+    "num_t = 10\n",
     "num_points = num_xy * num_t\n",
     "boundary = 5\n",
     "points = {}\n",
@@ -145,41 +82,22 @@
     "Nt = N\n",
     "\n",
     "for p in range(num_xy):\n",
-    "    if p % 100 == 0:\n",
-    "        print(p)\n",
+    "    # if p % 100 == 0:\n",
+    "    #     print(p)\n",
     "    x_idx = np.random.choice(np.arange(boundary,nx-boundary),1)[0]\n",
     "    y_idx = np.random.choice(np.arange(boundary,ny-boundary),1)[0]\n",
     "    for t_idx in range(num_t):\n",
     "        #we want to cover evenly len(t) in our sampling\n",
     "        t_idx_scale = math.floor(len(t)/num_t)\n",
-    "        #shift the sample index so that we can still compute the time derivative\n",
-    "        #we don't want to have negative index\n",
     "        t_idx_shift = max(math.floor((len(t)-t_idx_scale*num_t)/2),(Nt-1)//2)\n",
     "        points[count] = [x_idx,y_idx,t_idx_scale*t_idx+t_idx_shift]\n",
-    "        count = count + 1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "        count = count + 1\n",
+    "\n",
+    "\n",
     "# Take up to second order derivatives.\n",
     "u = np.zeros((num_points,1))\n",
-    "u_t = np.zeros((num_points,1))\n",
-    "u_x = np.zeros((num_points,1))\n",
-    "u_y = np.zeros((num_points,1))\n",
-    "u_xx = np.zeros((num_points,1))\n",
-    "u_yy = np.zeros((num_points,1))\n",
-    "u_xy = np.zeros((num_points,1))\n",
-    "lapu = np.zeros((num_points,1))\n",
-    "biharmu = np.zeros((num_points,1))\n",
+    "u_t1 = np.zeros((num_points,1))\n",
+    "u_t2 = np.zeros((num_points,1))\n",
     "\n",
     "deg = 4 # degree of polynomial to use\n",
     "\n",
@@ -188,52 +106,18 @@
     "Ly = 2*y[len(y)-1]\n",
     "\n",
     "for p in points.keys():\n",
-    "    if p % 1000==0:\n",
-    "        print(p)\n",
+    "    # if p % 1000==0:\n",
+    "    #     print(p)\n",
     "    [x_idx,y_idx,t_idx] = points[p]\n",
     "    #u\n",
     "    u[p] = U[x_idx,y_idx,t_idx]\n",
-    "    #u_t - consider trying the finite difference approach used by schaeffer\n",
-    "    u_t[p] = PolyDiffPoint(U[x_idx,y_idx,t_idx-(Nt-1)//2:t_idx+(Nt+1)//2], np.arange(Nt)*dt, deg, 1)\n",
-    "    #u_x\n",
-    "    u_x[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'x')[x_idx,y_idx]\n",
-    "    #u_y\n",
-    "    u_y[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'y')[x_idx,y_idx]\n",
-    "    #u_xx\n",
-    "    u_xx[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'xx')[x_idx,y_idx]\n",
-    "    #u_yy\n",
-    "    u_yy[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'yy')[x_idx,y_idx]\n",
-    "    #u_xy\n",
-    "    u_xy[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'xx')[x_idx,y_idx]\n",
-    "    #lapu\n",
-    "    lapu[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'laplacian')[x_idx,y_idx]\n",
-    "    #biharmu\n",
-    "    biharmu[p] = SpectralDerivs(U[:,:,t_idx],Lx,Ly,'biharmonic')[x_idx,y_idx]\n",
+    "    #u_t - comparing finite difference methods\n",
+    "    u_t1[p] = PolyDiffPoint(U[x_idx,y_idx,t_idx-(Nt-1)//2:t_idx+(Nt+1)//2], np.arange(Nt)*dt, deg, 1)\n",
+    "    u_t2[p] = BackwardDiff(U[:,:,t_idx],U[:,:,t_idx-1],dt)[x_idx,y_idx]\n",
     "\n",
-    "\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Consruct $\\Theta(U)$ and $U_t$\n",
-    "We use for our library\n",
-    "$$ 1, u, u^2, u^3, u^4, u_x, u_y $$\n",
-    "$$u_x^2, u_y^2, u_yu_x, u_{xx}, u_{yy}, u_{xy}, \\Delta u, \\Delta^2 u$$"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "print(np.linalg.norm(u_t1-u_t2))\n",
+    "print(np.max(u_t1-u_t2))\n"
+   ]
   }
  ],
  "metadata": {
