--- a/code/ml_experiments/PDEFIND/rd_test.ipynb
+++ b/code/ml_experiments/PDEFIND/rd_test.ipynb
@@ -11,6 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import sys\n",
+    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/PDEFIND')\n",
     "from PDE_FIND import *\n",
     "import scipy.io as sio\n",
     "import itertools"
