added phase surface

--- a/notes/Analysis_notes.tex
+++ b/notes/Analysis_notes.tex
@@ -94,7 +94,7 @@
             \beta_Y &= l\cos\psi.
         \end{align*}
         Note that the Jacobian of the transformation from $(\alpha,\beta)$ to $(X,Y)$ is $kl$ \textbf{why??? does $\alpha_X$ mean first component of $\alpha$, or derivative with respect to $X$}.\newline
-        The curves $\alpha(X,Y)=\text{constant}$ are the loci of constant phase, while the $\beta$ coordinates are the orthogonal trajectories, and measure the distance along the rolls. The curvature $\kappa_{\alpha}$.
+        The curves $\alpha(X,Y)=\text{constant}$ are the loci of constant phase, while the $\beta$ coordinates are the orthogonal trajectories, and measure the distance along the rolls. The curvature $\kappa_{\alpha}$ of $\alpha(X,Y)=\text{const}$ is given by .
 
 
 \end{itemize}
