--- a/code/ml_experiments/my_experiments/phase_surface.ipynb
+++ b/code/ml_experiments/my_experiments/phase_surface.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -33,14 +33,6 @@
      "text": [
       "data shape:  (256, 256, 201)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7f8bb2866ee0>"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -87,6 +79,7 @@
     "#plot solution\n",
     "fig, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(6,6))\n",
     "ax1.imshow(U[:,:,100])\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/figs/pres4/SH1.png\")\n",
     "\n",
     "#validate periodicity- this means spectral derivatives are fine\n",
     "fig = plt.figure(figsize=(6,6))\n",
@@ -104,7 +97,8 @@
     "ax[5].imshow(U[:,:,100])\n",
     "ax[6].imshow(U[:,:,100])\n",
     "ax[7].imshow(U[:,:,100])\n",
-    "ax[8].imshow(U[:,:,100])"
+    "ax[8].imshow(U[:,:,100])\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/figs/pres4/SH2.png\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -220,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "['1',\n 'u',\n 'u^2',\n 'u^3',\n 'u^4',\n 'u_{x}',\n 'u_{y}',\n 'u_{x}^2',\n 'u_{y}^2',\n 'u_{x}u_{y}',\n 'u_{xy}',\n 'lapu',\n 'biharmu']"
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -287,16 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
-    {
-     "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7f8b956daf10>"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": "<Figure size 432x432 with 1 Axes>",
@@ -311,7 +297,8 @@
    "source": [
     "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/phase3.mat\")\n",
     "fig, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(6,6))\n",
-    "ax1.imshow(data['phase'])"
+    "ax1.imshow(data['phase'])\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/figs/pres4/SH3.png\")"
    ],
    "metadata": {
     "collapsed": false,
