--- a/presentations/convection_pattern_piml_4.tex
+++ b/presentations/convection_pattern_piml_4.tex
@@ -84,7 +84,7 @@
         \item It's derivation dates back to the 80s, and there has been no proposed modification to capture more patterns.
         \item I want to use some data driven methods to analyze this problem.
         \item I am starting with simple methods for data driven discovery of PDEs.
-        \item I will learn how to "rediscover" known non-linear PDEs that generate patterns of interet, and then concoct an experiment to propose governing equations of the corresponding phase surfaces.
+        \item I will learn how to "rediscover" known non-linear PDEs that generate patterns of interest, and then concoct an experiment to propose governing equations of the corresponding phase surfaces.
      \end{itemize}
 \end{frame}
 
@@ -92,12 +92,12 @@
     \frametitle{PDE Discovery via Sparse Optimization}
 \begin{itemize}
   \item I combined ideas from Kutz et. al. and Hayden Schaeffer for finding governing equations via sparse regression.
-  \item Suppose we have access to solutions $u(x,y,t)$ on a spatio-temporal grid, and in addition, we are able to estimate time derivatives for each solution, $u_t(x,y,t)$. Let us collect the time derivatives one vector, $U_t$.
+  \item Suppose we have access to solutions $u(x,y,t)$ on a spatio-temporal grid, and in addition, we are able to estimate time derivatives for each solution, $u_t(x,y,t)$. Let us collect the time derivatives into one vector, $U_t$.
 \item 
     We can then form a feature matrix of tall, skinny feature vectors:
     \[
         F_u(t) = \begin{bmatrix}| & | & | & | & | & | & | & | & \dots\\
-            1 & u & u^2 & u_x & u_x^2 & uu_x & u_xx & u_xx & \dots\\
+            1 & u & u^2 & u_x & u_x^2 & uu_x & u_x^2 & u_{xx} & \dots\\
                                 | & | & | & | & | & | & | & | & \dots
                  \end{bmatrix}
     \] 
@@ -110,36 +110,56 @@
 \end{frame}
 
 \begin{frame}
-     \frametitle{"Discovering" Swift Hohenberg}
+     \frametitle{"Discovering" Swift Hohenberg: Derivatives, Sampling and Feature Generation}
      \begin{itemize}
          \item I used Operator Splitting and Exponential Time Differencing to obtain numerical solutions of Swift-Hohenberg $u_t = -\Delta^2 u - 2\Delta u + (R-1)u - u^3.$ 
         \item I used backward finite differences for my time derivatives, and spectral derivatives for all spatial derivatives.
         \item I used a "coarse" grid for sampling. Ie, I took 20 time steps, and down sampled the spatial grids by a factor of 8.
-        \item I used Sequentially Thresholded Ridge Regression. This is an iterative method which solve $\xi = \text{argmin}\|F_u(t)\xi-U_t\|_2^2 + \lambda \|\xi\|_2^2$ at each step, and applies a "hard" threshold to coefficients below a certain size, before repeating. The threshold tolerance is determined empirically by using an 80/20 test/train split. We used $\lambda = 1e-5$.
-     \end{itemize}
+    \end{itemize}
+    \begin{columns}[c]
+        \begin{column}{.5\textwidth}
+            \begin{figure}
+                \centering
+                \includegraphics[scale=0.2]{downsample.png}
+            \end{figure}
+        \end{column}
+        \begin{column}{.5\textwidth}
+            \begin{figure}
+                \centering
+                \includegraphics[scale=0.2]{featurematrix.png}
+            \end{figure}
+        \end{column}
+    \end{columns}
 \end{frame}
 
 \begin{frame}
-     \frametitle{"Discovering" Swift Hohenberg cont.}
-     \begin{itemize}
-         \item \href{https://github.com/EMcDugald/convection_patterns_wip/blob/master/code/ml_experiments/my_experiments/phase_surface.ipynb}{Notebook Demo}
-     \end{itemize}
+    \frametitle{"Discovering" Swift-Hohenberg: Optimization Procedure}
+     I used Sequentially Thresholded Ridge Regression. This is an iterative method which solves $\xi = \text{argmin}\|F_u(t)\xi-U_t\|_2^2 + \lambda \|\xi\|_2^2$ at each step, and applies a "hard" threshold to coefficients below a certain size, before repeating. The threshold tolerance is determined empirically by using an 80/20 test/train split. We used $\lambda = 1e-5$.
+      \begin{figure}
+        \centering
+        \includegraphics[scale=0.25]{STR.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+     \frametitle{"Discovering" Swift Hohenberg- Results}
+        \href{https://github.com/EMcDugald/convection_patterns_wip/blob/master/code/ml_experiments/my_experiments/phase_surface.ipynb}{Notebook Demo}
       \begin{figure}
         \centering
         \includegraphics[scale=0.25]{SH2.png}
         \end{figure}
- \begin{figure}
+     \begin{figure}
         \centering
-        \includegraphics[scale=0.25]{STR.png}
+        \includegraphics[scale=0.25]{result.png}
         \end{figure}
 \end{frame}
 
 \begin{frame}
      \frametitle{Next Steps}
      \begin{itemize}
-         \item Having successfully "rediscovered" Swift-Hohenberg, I am ready to extend the method to analysze the Cross-Newell Equation.
+         \item Having successfully "rediscovered" Swift-Hohenberg, I am ready to extend the method to analyze the Cross-Newell Equation.
         \item A simple first experiment would be to generate Swift-Hohenberg solutions that obey the restrictions imposed in the Cross-Newell derivation. If I can generate phase surfaces from the solutions, I can run the experiment on the phase surfaces, and see if such an experiment predicts Cross-Newell.
-        \item It would be neat to derive Cross-Newell, or a variant of it, directly from termperature surface simulations. I am wondering if there is a way to combine a neural network, or other machine learning technique to make this work.
+        \item It would be neat to derive Cross-Newell, or a variant of it, directly from temperature surface simulations. I am wondering if there is a way to combine a neural network, or other machine learning technique to make this work.
         \item First step is to find a reliable method for estimating phase surfaces, and return to the mathematical analysis to understand the Cross-Newell limitations.
      \end{itemize}
 \end{frame}
