--- a/code/ml_experiments/my_experiments/find_sh.ipynb
+++ b/code/ml_experiments/my_experiments/find_sh.ipynb
@@ -3,10 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": true
    },
    "source": [
     "We use \"PDEFIND\" method here to \"discover\" swift hohenberg from\n",
@@ -25,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -59,10 +56,12 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.io as sio\n",
     "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/my_experiments')\n",
     "from myPDEFIND import *\n",
     "import math\n",
     "\n",
-    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/sh3.mat\")\n",
+    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/sh.mat\")\n",
     "\n",
     "t = data['tt'].T[:,0]\n",
     "x = data['xx'].T[0,:]\n",
@@ -101,15 +100,12 @@
     "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/figs/pres4/SH2.png\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -194,10 +190,7 @@
     "            i+=1"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -214,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "['1',\n 'u',\n 'u^2',\n 'u^3',\n 'u^4',\n 'u_{x}',\n 'u_{y}',\n 'u_{x}^2',\n 'u_{y}^2',\n 'u_{x}u_{y}',\n 'u_{xy}',\n 'lapu',\n 'biharmu']"
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,15 +227,12 @@
     "['1'] + description[1:]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -261,10 +251,7 @@
     "print_pde(c, description)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -273,15 +260,12 @@
     "Looking at the phase"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -295,16 +279,22 @@
     }
    ],
    "source": [
-    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/phase3.mat\")\n",
+    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/phase.mat\")\n",
     "fig, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(6,6))\n",
     "ax1.imshow(data['phase'])\n",
     "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/figs/pres4/SH3.png\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
