--- a/code/ml_experiments/reaction_diffusion_test/rd_test.ipynb
+++ b/code/ml_experiments/reaction_diffusion_test/rd_test.ipynb
@@ -9,13 +9,10 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import sys\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/PDEFIND')\n",
     "from PDE_FIND import *\n",
-    "import scipy.io as sio\n",
-    "import itertools"
+    "import scipy.io as sio"
    ]
   },
   {
@@ -23,13 +20,10 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/rd2.mat\")"
+    "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/rd.mat\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -80,10 +74,7 @@
     "ax2.set_ylabel('y', fontsize = 16)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -109,10 +100,7 @@
     "        count = count + 1"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -175,10 +163,7 @@
     "    vyy[p] = vy_diff[1]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -203,10 +188,7 @@
     "['1'] + description[1:]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -233,10 +215,7 @@
     "print_pde(c, description)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -263,10 +242,16 @@
     "print_pde(c, description, ut = 'v_t')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
