--- a/code/numerics/derivatives/time_derivatives.ipynb
+++ b/code/numerics/derivatives/time_derivatives.ipynb
@@ -6,10 +6,7 @@
     "Comparing chebyshev differentiation with backward differences"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -42,6 +39,8 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.io as sio\n",
     "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/my_experiments')\n",
     "from myPDEFIND import *\n",
     "import math\n",
     "\n",
