--- a/code/ml_experiments/autoencoder/scratch.ipynb
+++ b/code/ml_experiments/autoencoder/scratch.ipynb
@@ -108,7 +108,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Break data into train and test"
+    "Break data into train and test\n",
+    "https://github.com/kpchamp/SindyAutoencoders/blob/master/examples/rd/example_reactiondiffusion.py"
    ],
    "metadata": {
     "collapsed": false
@@ -159,9 +160,8 @@
     "Ut = Utfull[:,:,:][::x_subsample,::y_subsample]\n",
     "print(\"shape of full U data: \", np.shape(Ufull))\n",
     "print(\"shape of spatially subsampled U data: \",np.shape(U))\n",
-    "perm = np.random.permutation(int(.8*n_samples))\n",
-    "training_samples = perm[:int(.8*n_samples)]\n",
-    "val_samples = perm[int(.8*n_samples):]\n",
+    "training_samples = np.arange(int(.8*n_samples))\n",
+    "val_samples = np.arange(int(.8*n_samples), int(.9*n_samples))\n",
     "test_samples = np.arange(int(.9*n_samples), n_samples)\n",
     "training_data = {'tt': tt[training_samples],\n",
     "                     'xx': xx.T,\n",
